--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ li {
   width: 100%;
   height: 60px;
   position: fixed;
+  border-bottom: 1px solid black;
   z-index: 1;
 }
 
@@ -575,4 +576,3 @@ button:hover {
   --white-color:#fff;
   --orange-color: #ffaa00;
 }
-/*# sourceMappingURL=style.css.map */
