--- a/style.scss
+++ b/style.scss
@@ -25,8 +25,8 @@ li{
     align-items: center; // cross axis alignment
     width: 100%;
     height: 60px;
-    position:fixed ;
-    
+    position:fixed;
+    border-bottom: 1px solid black;
     z-index: 1;
 
     //padding: 10px 0;
