--- a/style.scss
+++ b/style.scss
@@ -26,7 +26,6 @@ li{
     width: 100%;
     height: 60px;
     position:fixed;
-    border-bottom: 1px solid black;
     z-index: 1;
 
     //padding: 10px 0;
@@ -322,9 +321,10 @@ a {
     text-align: center;
     cursor: pointer;
     background-color: var(--slight-black-color);
+    border: none;
     font-size: 1.4rem;
     &:hover{
-        color: grey ;
+        color: white ;
     }
     
 
