--- a/article.css
+++ b/article.css
@@ -38,7 +38,6 @@
 .letter {
   height: 85%;
   width: 80%;
-  background-color: green;
   position: relative;
   left: -3px;
   top: -2px;
@@ -47,7 +46,7 @@
   z-index: -1;
   background-image: var(--url);
   overflow-wrap: normal;
-  padding: 25px;
+  padding: 20px;
   font-family: 'Gwendolyn';
 }
 
@@ -63,7 +62,6 @@
 .bletter {
   height: 100%;
   width: 100%;
-  background-color: white;
   position: absolute;
   background-image: var(--url);
   -webkit-transform: rotate(5deg);
@@ -72,7 +70,7 @@
   -webkit-box-shadow: -1px -1px 20px 3px rgba(0, 0, 0, 0.41);
           box-shadow: -1px -1px 20px 3px rgba(0, 0, 0, 0.41);
   overflow: hidden;
-  padding: 40px;
+  padding: 20px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -96,3 +94,4 @@
   margin-top: 80px;
   text-align: right;
 }
+/*# sourceMappingURL=article.css.map */
